tests/fixtures/invalid/key-after-array.stderr
TOML parse error at line 1, column 14
  |
1 | [[agencies]] owner = "S Cjelli"
  |              ^
Unexpected `o`
Expected newline or end of input
While parsing a Table Header
